✨ new(basic box): basic box spacing fix.

--- a/packages/assets/css/src/scss/_components/_basic-box/_elements/_build-header.scss
+++ b/packages/assets/css/src/scss/_components/_basic-box/_elements/_build-header.scss
@@ -19,8 +19,12 @@
 				padding: $spacing-xxl;
 				border-bottom: $border-width-sm solid $color-extended-neutral-80;
 
-				@include media(max-width, sm) {
+				@include media(max-width, md) {
 					padding: $spacing-xl;
+				}
+
+				@include media(max-width, sm) {
+					padding: $spacing-xl $spacing-lg;
 				}
 			}
 
