--- a/packages/assets/css/src/scss/_components/_setting-block/_elements/_build-body.scss
+++ b/packages/assets/css/src/scss/_components/_setting-block/_elements/_build-body.scss
@@ -16,6 +16,7 @@
 		// Block wrapper.
 		@include block($block) {
 			@include element(body) {
+				flex: 1;
 				p {
 					&:first-child {
 						margin-top: 0;
